# cs224w-project

./: .gitignore  .gitmodules  LICENSE  README.md  claude.md  commands  pyproject.toml  reqs2.txt  requirements.txt
llm_baseline/: .gitignore  README.md
llm_baseline/deepseek/: deepseek_judge_all.py  deepseek_judge_one.py
llm_baseline/gpt5-mini/: gpt5-mini_judge_all.py  gpt5-mini_judge_one.py
scripts/: 00_sanity_test.py  01_1_visualize_tree.py  01_2_parse_graph_data.py  01_2_visualize_tree_enhanced.py  01_3_visual_new_trees.py  01_4_visualize_enchanced.py  01_5_regenerate_graphs.py  01_6_regenerate_graphs_new.py  01_7_causal_edges.py  01_7_regenerate_graphs_new_modified.py  01_8_fix_graphs.py  01_parse_data.py  01_parse_new_data.py  02_1_hparam_sweeps.py  02_train_model.py  03_explain.py  03_precompute_embeddings.py  04_evaluate.py  analyze_sweep_results.py  json_to_jsonl.sh  merge_scores.py  run_training_hetero_gin.sh  test_data_loading.py  train_gat_simple.sh  visualize_graph.py
scripts/training/: run_training_encoder.sh  run_training_graph.sh  run_training_no_encoder.sh  run_training_text.sh  train_small_dataset.sh
scripts/utils/: 00_fix_labels.py  continue_from_step.py  generate_plots.py  sort_sweep_results.py  view_sketches.py
src/: __init__.py  running_training_logs.rtf
src/data/: __init__.py  dataset.py  graph_builder.py  lcot2tree_wrapper.py  llm_client.py  parser.py
src/data/pipeline/: __init__.py  (+4 more)
src/explainer/: __init__.py  gnn_explainer.py  visualizer.py
src/models/: __init__.py  gin.py
src/training/: __init__.py  evaluator.py  trainer.py
(+17 files in other folders)
